--- a/src/styles/normalize.less
+++ b/src/styles/normalize.less
@@ -36,10 +36,13 @@ button {
 	background-color: transparent;
 	padding: 0;
 	border: none;
+	user-select: none;
 	cursor: pointer;
 	outline: none;
 }
 
 img {
+	user-select: none;
+	pointer-events: none;
 	backface-visibility: hidden;
 }
