results page layout

--- a/src/styles/shares.less
+++ b/src/styles/shares.less
@@ -1,6 +1,6 @@
 
 button.toggle-shares {
-	position: absolute;
+	position: fixed;
 	left: 40px;
 	bottom: 40px;
 	width: 26px;
@@ -32,7 +32,7 @@ button.toggle-shares {
 }
 
 .shares {
-	position: absolute;
+	position: fixed;
 	left: 80px;
 	bottom: 43px;
 	display: inline-flex;
