--- a/src/styles/shares.less
+++ b/src/styles/shares.less
@@ -1,13 +1,13 @@
 
 button.toggle-shares {
-	position: fixed;
-	left: 40px;
-	bottom: 40px;
+	position: absolute;
+	left: 30px;
+	bottom: 30px;
 	width: 26px;
 	height: 26px;
-	opacity: 0;
-	animation: fade-in .5s forwards;
-	animation-delay: 1.8s;
+	// opacity: 0;
+	// animation: fade-in .5s forwards;
+	// animation-delay: 1.8s;
 	z-index: 1;
 
 	svg {
@@ -32,9 +32,9 @@ button.toggle-shares {
 }
 
 .shares {
-	position: fixed;
+	position: absolute;
 	left: 80px;
-	bottom: 43px;
+	bottom: 32px;
 	display: inline-flex;
 	align-items: center;
 	z-index: 1;
