--- a/src/styles/shares.less
+++ b/src/styles/shares.less
@@ -56,6 +56,10 @@ button.toggle-shares {
 			&:nth-child(4) {
 				transition-delay: .3s
 			}
+
+			&:nth-child(5) {
+				transition-delay: .4s
+			}
 		}
 	}
 
